Fix detection of MBR partition table with zeroed signature.

BUG: 487650